Bug 398878 - krdc crashes when disconnecting from VNC servers
Summary: krdc crashes when disconnecting from VNC servers
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: VNC (other bugs)
Version First Reported In: 18.04
Platform: Gentoo Packages Linux
: NOR major
Target Milestone: ---
Assignee: Urs Wolfer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-20 16:18 UTC by Luke-Jr
Modified: 2021-03-12 15:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace (90.53 KB, text/plain)
2018-09-20 16:18 UTC, Luke-Jr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke-Jr 2018-09-20 16:18:50 UTC
Created attachment 115124 [details]
backtrace

Application: krdc (18.04.3)

Qt Version: 5.11.1
Frameworks Version: 5.49.0
Operating System: Linux 4.17.14-gentoo-p9_dma-zfs ppc64le
Distribution: "Gentoo Base System release 2.4.1"

-- Information about the crash:
- What I was doing when the application crashed:

It seems to crash in at least these cases:
- Connection times out
- "Disconnect" button clicked during initial connection

The crash can be reproduced every time.
Comment 1 tildearrow 2020-11-05 07:38:21 UTC
Reproduced. Steps to Reproduce:

1. Connect to a host that is down.
2. Press Disconnect.
3. Repeat 1 and 2 several times.
4. After a while, something happens and KRDC crashes.
Comment 2 Lamarque V. Souza 2021-03-12 15:30:40 UTC
Git commit ba6baad9b49a8a7fe57f27046631fc00c177e1a0 by Lamarque V. Souza.
Committed on 12/03/2021 at 15:26.
Pushed by lvsouza into branch 'fix_crash_on_disconnect'.

Fix crash when closing a tab.

TabbedViewWidget::removePage is called twice for the same page, which
leads to crash on the second run. It is called by those two signals in
mainwindow.cpp:

connect(disconnectAction, SIGNAL(triggered()), SLOT(disconnectHost()));
connect(view, SIGNAL(disconnected()), this, SLOT(disconnectHost()));

M  +3    -0    tabbedviewwidget.cpp

https://invent.kde.org/network/krdc/commit/ba6baad9b49a8a7fe57f27046631fc00c177e1a0