Fix crash when closing a tab.

TabbedViewWidget::removePage is called twice for the same page, which
leads to crash on the second run. It is called by those two signals in
mainwindow.cpp:

connect(disconnectAction, SIGNAL(triggered()), SLOT(disconnectHost()));
connect(view, SIGNAL(disconnected()), this, SLOT(disconnectHost()));

BUG: 398878